# pm25-api

./: .dockerignore  .gitignore  Dockerfile  README.MD  pyproject.toml  run
app/: main.py  models.py  utils.py
data/: global_pm25.nc
tests/: test_api.py
