# pyproject.toml

[tool.poetry]
name = "pm25-api"
version = "1.0.0"
description = "A REST API for PM2.5 dataset analytics using NetCDF data and Pandas DataFrame."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
xarray = "^2023.1.0"
netCDF4 = "^1.6.2"
pytest = "^7.1.2"
httpx = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
